[package]
name = "analspbu"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl = "0.7"
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1.4"
regex = "1.9"
indicatif = "0.17"
rand = "0.8"